# mcpify

./: .gitignore  Cargo.toml  README.md
.cursor/rules/: rust.mdc
src/: cli.rs  error.rs  generator.rs  main.rs
templates/: .env.example  package.json
