[package]
name = "mcpify"
version = "0.1.0"
edition = "2021"
authors = ["Niels Degrande <niels@degran.de>"]
description = "A tool to convert OpenAPI files to MCP server code."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
